tests/paczka1/small_fuzzy/28981208.err
Error in line 2: u5PXjdE A298 62,3
Error in line 6: A600 A812 85,2
Error in line 12: vH2FZeF A812 63,70
